@@ -1,0 +1,35 @@
+34
+3.3232234 6.676777
+4.323223 6.676777
+4.323223 9.323223
+3.3232234 9.323223
+3.3232234 10.676777
+4.323223 10.676777
+4.323223 11.323223
+2.6767766 11.323223
+2.6767766 9.323223
+1.3232234 9.323223
+1.3232234 12.676777
+4.676777 12.676777
+4.676777 11.676777
+5.676777 11.676777
+5.676777 10.676777
+9.323223 10.676777
+9.323223 11.323223
+6.323223 11.323223
+6.323223 14.323223
+5.676777 14.323223
+5.676777 13.323223
+2.3232234 13.323223
+2.3232234 14.323223
+-0.3232233 14.323223
+-0.32322332 5.676777
+0.6767767 5.676777
+0.67677665 4.676777
+1.3232232 4.676777
+1.3232234 8.676777
+2.6767766 8.676777
+2.6767766 4.676777
+5.323223 4.676777
+5.323223 5.323223
+3.3232234 5.323223
