@@ -1,0 +1,17 @@
+16
+9 2
+8 2
+8 3.5
+9 3.5
+9 5
+8.5 5
+8.5 4
+6 4
+6 5.5
+8 5.5
+8 6.5
+9 6.5
+9 9
+0 9
+0 0
+9 0
